tests/derive/wrong_type.stderr
error: custom attribute panicked
 --> $DIR/wrong_type.rs:3:1
  |
3 | #[system(Test)]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: A system will only accept a type of this list:
          
                      &T for an immutable reference to T storage
                      &mut T for a mutable reference to T storage
                      &Entities for an immutable reference to the entity storage
                      &mut EntitiesMut for a mutable reference to the entity storage
                      AllStorages for a mutable reference to the storage of all components
                      ThreadPool for an immutable reference to the rayon::ThreadPool used by the World
