tests/derive/wrong_type.rs
use shipyard::*;

#[system(Test)]
fn run(_: fn()) {}